[project]
name = "tcg-pocket-hand"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FrancoValeriano", email = "fgvaler@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
